--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "adventure_game",
-  "version": "1.0.0",
+  "name": "k1r1_adventure_game",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "type": "module",
-  "bin": "app.js",
+  "bin": {
+    "adventure_game": "app.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
-    "inquirer": "^9.2.20"
+    "inquirer": "^9.2.20",
+    "k1r1_adventure_game": "^1.0.1"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.7"
